--- a/styles/index.css
+++ b/styles/index.css
@@ -1,131 +1,302 @@
-*{
+* {
     margin: 0;
     padding: 0;
+}
+
+body {
+    background-color: var(--dark);
     font-family: "Satoshi-Regular";
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Teko-Semibold';
-    color: var(--darkgray);
 }
 
-p{
-    font-size: 1.5rem;
+h1 {
+    color: var(--blue);
+    font-size: 10rem;
+    letter-spacing: 0.1rem;
+    line-height: 120px;
 }
 
-.absolute{
-    width: 100%;
-    height: 100%;
+h2 {
+    letter-spacing: 0.1rem;
+    font-size: 8rem;
+}
+
+p {
+    font-family: "Satoshi-Light";
+    font-size: 2rem;
+}
+
+strong {
+    font-family: "Satoshi-Regular";
+    color: var(--blue);
+}
+
+.space {
+    margin: 5vh;
+    border: 0px;
+}
+
+.circle {
     position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
+
+    width: 25px;
+    height: 25px;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    background: var(--blue);
 }
 
-.nav-container{
-    width: 100%;
-    height: 60px;
+.design__vl {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+}
+
+.design__hl {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+}
+
+.vl {
+    border-left: 3px solid var(--blue);
+}
+
+.hl {
+    border-top: 3px solid var(--blue);
+}
+
+/*Contenedores principales*/
+.container__primary h2 {
+    font-size: 6rem;
+}
+
+.container__primary li {
+    list-style: none;
+}
+
+.container__secondary {
     background-color: var(--darkgray);
 }
 
-.home-container{
-    width: 50%;
-    height: 60px;
-    margin: 0;
+.nav-container {
+    background-color: var(--dark);
+    height: 5vh;
+}
+
+.home-container {
+    width: 40vw;
+    height: 5vh;
+    margin: 0 0 0 15vw;
     list-style: none;
 
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
-.home-items a{
+.home-items a {
     font-size: 1.5rem;
 
     text-decoration: none;
+    color: var(--gray);
+}
+
+.container__banner{
+    display: flex;
+    margin: 10vh 15vw;
+    
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.content__banner{
+    width: 100%;
+
+    text-align: left;
+    flex: 1;
     color: white;
 }
 
-.container-video{
-    background-color: white;
-    height: 60vh;
-    overflow: hidden;
+.container__banner img{
+    margin-bottom: 5vh;
+    max-height: 70vh;
+
+    flex: 2;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
-.container-title{
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    z-index: 1;
+/*contenedor definicion*/
+.container__definicion {
+    margin: 10vh 15vw;
+    display: flex;
+}
 
-    width: 100%;
-    height: 60vh;
+.content-definicion {
+    padding: 10vh 0 30vh 100px;
 
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+
+/*contenedor tipos*/
+.design__tipos{
+    display: flex;
+}
+
+.container__tipos {
+    margin: 0vh 15vw;
+}
+
+.content-tipos {
+    padding: 5vh 0;
+    display: grid;
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.tipos-text{
+    display: flex;
+    flex-direction: row;
+}
+
+.tipos-lista{
+    width:60vw;
+}
+
+.tipos-lista-item {
+    border: 1px solid var(--dark);
+    box-shadow: -5px 5px 0px -1px rgba(0,0,0,1);
+    padding: 50px;
+    margin: 2vh 0;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.item-text h3 {
+    color: var(--yellow);
+    font-family: 'Satoshi-Regular';
+    font-size: 2rem;
+    margin-bottom: 50px;
+}
+
+.item-text p {
+    font-size: 1.25rem;
+}
+
+.item-text{
+    flex: 2;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: start;
+}
+
+.item-image {
+    flex: 1;
+
+    display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-
-    font-weight: bold;
-    font-size: 3rem;
 }
 
-.container-primary{
-    margin: 50px 10%;
+.item-image img{
+    height: 60%;
+    width: 70%;
+    max-height: 200px;
 }
 
-.container-primary h1{
-    font-size: 4rem;
+.container__darkgray{
+    color: var(--dark);
+    background-color: var(--darkgray);
 }
 
-.container-definicion{
-    display: flex;
+.container__dark{
+    color: var(--gray);
+    background-color: var(--dark);
 }
 
-.container-definicion .text{
-    flex: 1;
-    margin-right: 20px;
+:root {
+    /*Background*/
+    --dark: rgb(30, 32, 33);
+    --darkgray: rgb(216, 216, 216);
+
+    /*Secundary*/
+    --blue: #0075fc;
+
+    /*Accent*/
+    --yellow: #dfa21f;
+
+    /*Texto*/
+    --gray: rgb(145, 145, 145);
 }
 
-.container-definicion .image{
-    flex: 1;
+.sombra-personalizada{
+    -webkit-box-shadow: 10px 10px 0px -1px rgba(0,0,0,1);
+    -moz-box-shadow: 10px 10px 0px -1px rgba(0,0,0,1);
+    box-shadow: 10px 10px 0px -1px rgba(0,0,0,1);
+}
+
+::-webkit-scrollbar {
+    width: 3px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-button {
+    height: 0px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--darkgray);
 }
 
 @font-face {
     font-family: 'Satoshi-Regular';
     src: url('../assets/fonts/Satoshi/Satoshi-Regular.woff2') format('woff2'),
-         url('../assets/fonts/Satoshi/Satoshi-Regular.woff') format('woff'),
-         url('../assets/fonts/Satoshi/Satoshi-Regular.ttf') format('truetype');
-         font-weight: 400;
-         font-display: swap;
-         font-style: normal;
+        url('../assets/fonts/Satoshi/Satoshi-Regular.woff') format('woff'),
+        url('../assets/fonts/Satoshi/Satoshi-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Satoshi-Light';
+    src: url('../assets/fonts/Satoshi/Satoshi-Light.woff2') format('woff2'),
+        url('../assets/fonts/Satoshi/Satoshi-Light.woff') format('woff'),
+        url('../assets/fonts/Satoshi/Satoshi-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-display: swap;
+    font-style: normal;
 }
 
 @font-face {
     font-family: 'Teko-SemiBold';
     src: url('../assets/fonts/Teko/Teko-SemiBold.woff2') format('woff2'),
-         url('../assets/fonts/Teko/Teko-SemiBold.woff') format('woff'),
-         url('../assets/fonts/Teko/Teko-SemiBold.ttf') format('truetype');
-         font-weight: 600;
-         font-display: swap;
-         font-style: normal;
+        url('../assets/fonts/Teko/Teko-SemiBold.woff') format('woff'),
+        url('../assets/fonts/Teko/Teko-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-display: swap;
+    font-style: normal;
 }
-
-:root{
-    --darkgray: rgb(26, 26, 26);
-}
-
-::-webkit-scrollbar{
-    width: 3px;
-    background-color: transparent;
-}
-::-webkit-scrollbar-button{
-    height: 0px;
-    background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb{
-    background-color: var(--darkgray);
-}
-
